# SkyOdyssey-CLI

./: .gitignore  README.md  airports.py  logic.py  main.py  pyproject.toml  requirements.txt
.agents/skills/skyodyssey/: SKILL.md
