[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyodyssey"
version = "1.0.0"
description = "A professional flight search tool for digital nomads and frequent flyers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fast-flights",
    "rich>=13.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
skyodyssey = "main:main"

[tool.setuptools]
py-modules = ["main", "logic", "airports"]
